# fight_calendar_x

./: README.md  pyproject.toml
config/: settings.py  urls.py
fight_calendar_x/: apps.py  manage.py  views.py
fight_calendar_x/data/: calendar_raw.xlsx  ohhashi.csv
fight_calendar_x/fight_calendar_x/: asgi.py  settings.py  urls.py  wsgi.py
fight_calendar_x/templates/fight_calendar_x/: base.html  index.html
notebooks/: sample.ipynb
