[tool.poetry]
name = "fight_calendar_x"
version = "0.1.0"
description = ""
authors = ["atsushimemet <noap3b69n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"
jupyterlab-code-formatter = "^2.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pandas = "^2.0.1"
Django = "^4.2.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
